[package]
name = "rust_gpt_two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[features]
print_enabled = []
conditional_exp = []
if_statement = []
syntax_usage = []
multiple_condition = []
if_let_syntax = []
for_loop = []
for_loop_1 = []
for_loop_2 = []
all_features = ["conditional_exp", "if_statement"]